--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,12 @@
 <header class="nav-bar">
-    <div class="nav-content">
-        <a href="{{ '/' | relative_url }}">
-            <div class="nav-logo">
-                <img src="./assets/img/logo.svg" />
-                <a class="nav-link" href="{{ site.url }}/cv/resume.pdf">Resume</a>                
-            </div>
-        </a>        
-    </div>
+  <div class="nav-content">
+    <a href="{{ '/' | relative_url }}">
+      <div class="nav-logo">
+        <img src="./assets/img/logo.svg" />
+      </div>
+      <div class="nav-item">
+        <a class="nav-link" href="{{ site.url }}/cv/resume.pdf">Resume</a>
+      </div>
+    </a>
+  </div>
 </header>
